docs/stylesheets/extra.css
.md-logo img {
     width: 150px !important;
     height: 50px !important;
}

/* page width */
.md-grid {
    max-width: 1600px;
}

table {
    width:100%;
    max-width: 1600px;
}

.md-typeset__table {
   min-width: 100%;
}

.md-typeset table:not([class]) {
    display: table;
    background-color: var(--md-default-bg-color);
    border: 0.05rem solid var(--md-default-bg-color);
    border-radius: 0.25rem;
    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5), 0 0 1px rgba(0, 0, 0, 0.1);
    touch-action: auto;
}

.md-typeset table:not([class]) th {
    min-width: 300px;
    padding: px2em(12px, 12.8px) px2em(16px, 12.8px);
    color: var(--md-default-bg-color);
    vertical-align: top;
    background-color: var(--md-default-fg-color--light);
    font-weight: normal;
}

.md-typeset table:not([class]) th a {
    color: inherit;
}

.md-typeset table:not([class]) td {
    padding: px2em(12px, 12.8px) px2em(16px, 12.8px);
    vertical-align: top;
    border-top: 1px solid var(--md-default-fg-color--lightest);
}

.md-typeset table:not([class]) tr:first-child td {
    border-top: 0;
}

th, td {
    border: 1px solid var(--md-typeset-table-color);
    border-spacing: 0;
    border-bottom: none;
    border-left: none;
    border-top: none;
}

.md-typeset__table {
    line-height: 1;
}

.md-typeset__table table:not([class]) {
    font-size: .74rem;
    border-right: none;
}

.md-content {
    --md-typeset-a-color: #09BFFF;
}

[data-md-color-scheme="slate"] .md-nav__link--active {
    color: var(--md-slate-structureal-elements);
    font-weight: 700;
}

[data-md-color-scheme="slate"] .md-button {
    color: var(--md-slate-structureal-elements);
/*  background-color: #6212BD;*/
    border-color: var(--md-slate-structureal-elements);
}

[data-md-color-scheme="slate"] .md-button--primary {
    color: rgba(255, 255, 255, 1);
    background-color: var(--md-slate-structureal-elements);
    border-color: var(--md-slate-structureal-elements);
}

/* Add emphasizing box arround active link*/
/*
.md-nav__link--active {
    background-color: rgba(0, 176, 255, 0.1);
    border-radius: 4px;
    padding-left: 10px;
}
*/

:root {
    --md-primary-fg-color: #022658;
    --md-primary-fg-color--light: #ECB7B7;
    --md-primary-fg-color--dark: #90030C;
    --md-slate-structureal-elements: #0033CC;
}

